2010-11-08
 * autofocusing scripts

2010-11-07
 * scripting for image processing script

2010-10-27
 * added "VT" (Value Type) function to stdin/stdout scripting
2010-10-26
 * added "move" function to stdin/stdout scripting
 * added ThorLaser driver

2010-10-11
 * compute expected script duration
 * allow specifiing tempdisable in days, hours or weeks

2010-10-08
 * added messages mailing/commands/..

2010-09-29
 * added id-only and name-only to rts2-targetinfo and rts2-target

2010-09-25
 * added capability to delete targets

2010-09-24
 * add PI and program name (as labels)

2010-09-21
 * allow users to specify minimal length for expression format

2010-09-11
 * moved Target to rts2db namespace, and some associated namespace changes

2010-09-09
 * tempdisable editing options
 * name resolving

2010-08-18
 * constraints support (.xsd and .xml for constraint files..)

2010-08-04
 * boolean array support

2010-07-15
 * support for multiple extension images (on client side)

2010-07-11
 * BOP_WAIT_TRIG, BOP_WILL_EXPOSE and related machinery

2010-06-12
 * Camera filter focusing offsets

2010-05-06
 * Change in B (BOP) message (central server comm) - adds server state

2010-03-21
 * Big Brother support (configuration entry in events.xsd, support in xmlrpcd)

2010-03-20
 * Various other FLI improvements. You will need to use FLI library from RTS2 repository.
 * FLI uses reported serial numbers
 * Modified flat strategy

2010-03-19
 * entry page with list of requests available on the server

2010-03-16
 * added javascript date selection
 * removed wcs directory

0.8.0-1
=====

2010-03-15
 * 0.8.0-1 released
 * various fixes to compilation process
 * fix to calibration target

0.8.0
=====

2010-03-07
 * 0.8.0 released

2010-02-25
 * added lib directory
 * camera experimetal shared memory transport

2010-02-20
 * Replaced SOAP library with own simple Simbad support

2010-02-17
 * HTTP client support, -u option for rts2-xmlrclient

2010-02-16