@@ -1,3 +1,6 @@
+2010-11-11
+ * rts2-user can delete users
+
 2010-11-08
  * autofocusing scripts
 
